// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem: should render icon 1`] = `
<div
  className="listItem"
>
  <div
    className="listItemIcon"
  >
    <Education icon />
  </div>
  <div
    className="listItemBody"
  >
    <div
      className="listItemTitle"
    >
      testTitle
    </div>
    <div
      className="listItemValue"
    >
      testValue
      <span>
        <span>
           
        </span>
        <span />
      </span>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render title value 1`] = `
<div
  className="listItem"
>
  <div
    className="listItemBody"
  >
    <div
      className="listItemTitle"
    >
      testTitle
    </div>
    <div
      className="listItemValue"
    >
      testValue
      <span>
        <span>
           
        </span>
        <span />
      </span>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render value 1`] = `
<div
  className="listItem"
>
  <div
    className="listItemBody"
  >
    <div
      className="listItemValue"
    >
      testValue
      <span>
        <span>
           
        </span>
        <span />
      </span>
    </div>
  </div>
</div>
`;
